Fixed layout issue on tutorial step 3 demo 1.
Issue: #85, #6

--- a/src/TutorialExamples/Page03Example01.css
+++ b/src/TutorialExamples/Page03Example01.css
@@ -3,6 +3,7 @@ body
 	color: black;
 	background-color: #1e1e1e;
 	font-family: Calibri, "Lucida Grande", sans-serif;
+	margin: 2px 2px 2px 2px;
 }
 
 button
